Fixes heading spacing

--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -81,6 +81,7 @@ h4,
 h5,
 h6 {
   margin-bottom: 22px;
+  margin-top: 22px;
   font-weight: 900;
 }
 
